# Autopsy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  big-pickle.html  install.sh  plan.md  test_error.py  test_plan.md
service/: README.md  pyproject.toml
service/src/aag/: __init__.py  config.py  db.py  db_init.py  deps.py  main.py
service/src/aag/analyzer/: __init__.py  classifier.py  extractor.py  llm.py
service/src/aag/analyzer/rules/: __init__.py  frontend_drift.py  missing_migration.py  missing_test.py  rejection_reason.py  schema_change.py  sentiment.py
service/src/aag/graph/: __init__.py  embeddings.py  export_import.py  preflight_cache.py  preflight_synth.py  seed.py  traversal.py  writer.py
service/src/aag/ingestion/: __init__.py  assembler.py  pubsub.py
service/src/aag/models/: __init__.py  embedding.py  failure.py  graph.py  preflight_hit.py  rejection.py  run.py
service/src/aag/routes/: events.py  graph.py  preflight.py  report.py  runs.py  stream.py
service/src/aag/schemas/: __init__.py  events.py  graph.py  preflight.py  runs.py
service/src/aag/workers/: finalizer.py  stale_sweeper.py
service/tests/: conftest.py  test_classifier.py  test_demo_loop.py  test_embeddings_write.py  test_events_noisy_filter.py  test_events_route.py  test_extractor.py  test_finalizer.py  test_graph_export_import.py  test_graph_routes.py  test_graph_writer.py  test_health.py  test_llm.py  test_preflight_route.py  test_preflight_synth.py  test_report_route.py  test_runs_route.py  test_stale_sweeper.py  test_stream_route.py  test_traversal.py
(+153 files in other folders)
