[project]
name = "aag"
version = "0.1.0"
description = "Agent Autopsy Graph — ingestion + analyzer + graph + preflight service."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sse-starlette>=2.1",
    "httpx>=0.28",
    "unidiff>=0.7.5",
    "numpy>=2.1",
    "python-ulid>=3.0",
    "google-generativeai>=0.8.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

# Optional: real local embeddings. Heavy install (~500MB), so off by default.
# Enable with:  uv sync --extra ml
[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.3",
]
openai = [
    "openai>=1.55",
]
gemma = [
   "google-generativeai>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
